[gd_scene load_steps=3 format=3 uid="uid://bktsgeb5uww62"]

[ext_resource type="Script" uid="uid://cpaufvsjfjrkr" path="res://ui/NPCPanel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dub370j3w7k8n" path="res://assets/images/dwarf.png" id="2_8t4v1"]

[node name="NPCInventoryPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NPCTabs" type="TabBar" parent="VBox"]
layout_mode = 2
current_tab = 0
tab_count = 2
tab_0/title = "NPC 1"
tab_1/title = "NPC 2"

[node name="Header" type="PanelContainer" parent="VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox/Header"]
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="VBox/Header/HBox"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("2_8t4v1")
expand_mode = 5

[node name="VBoxInfo" type="VBoxContainer" parent="VBox/Header/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NPCName" type="Label" parent="VBox/Header/HBox/VBoxInfo"]
layout_mode = 2
text = "Trader Vex"

[node name="Disposition" type="Label" parent="VBox/Header/HBox/VBoxInfo"]
layout_mode = 2
text = "Disposition: Neutral"

[node name="Content" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="SectionTitle" type="Label" parent="VBox/Content"]
layout_mode = 2
text = "TRADER INVENTORY"

[node name="ItemScroll" type="ScrollContainer" parent="VBox/Content"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3

[node name="ItemGrid" type="GridContainer" parent="VBox/Content/ItemScroll"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="WhisperContent" type="HBoxContainer" parent="VBox/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="VBox/Content/WhisperContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChatVBox" type="VBoxContainer" parent="VBox/Content/WhisperContent/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChatLog" type="RichTextLabel" parent="VBox/Content/WhisperContent/HBox/ChatVBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="InputBox" type="HBoxContainer" parent="VBox/Content/WhisperContent/HBox/ChatVBox"]
layout_mode = 2

[node name="InputLine" type="LineEdit" parent="VBox/Content/WhisperContent/HBox/ChatVBox/InputBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Whisper..."

[node name="SendButton" type="Button" parent="VBox/Content/WhisperContent/HBox/ChatVBox/InputBox"]
layout_mode = 2
text = "Send"
